--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-alembic==1.18.3
+alembic==1.17.2
 blinker==1.9.0
 click==8.3.1
 colorama==0.4.6
@@ -9,14 +9,15 @@ Flask-Login==0.6.3
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
-greenlet==3.3.1
+greenlet==3.2.4
 idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.3
-pillow==12.1.0
-SQLAlchemy==2.0.46
+pillow==12.0.0
+python-dotenv==1.2.1
+SQLAlchemy==2.0.44
 typing_extensions==4.15.0
-Werkzeug==3.1.5
+Werkzeug==3.1.3
 WTForms==3.2.1
